- Updated jQuery to 2.2.0.
- Updated Bootstrap 3.3.6.
MVC 5
- Switched from Twitter.Bootstrap.Less NuGet package to Bootstrap.Less.
MVC 6
- Use an absolute expiration instead of a sliding one for the sitemap, just in case people are dynamically generating 
the sitemap.
- Updated Font Awesome to 4.5.0.
- Updated JavaScript Mocha, Chai and Sinon.
- Updated Gulp packages.

Version 2.9.4
MVC 6
- Fix issue where removing application insights caused a compile error in Startup.ContentSecurityPolicy.cs.

Version 2.9.3
MVC 6
- Added new feature selection icons.
- Updated the MVC 6 Technology Map image.
- Updated the ReadMe to uncomment the Glimpse TODO and make the social TODO's conditional.

Version 2.9.2
MVC 5 & 6
- Added NoLowercaseQueryStringAttribute filter to allow URL's containing query strings with upper-case characters when 
using the RedirectToCanonicalUrlAttribute. Added a note to use this attribute in the AccountController when using 
ASP.NET Identity.
- Only redirect to the canonical URL for GET requests when using the RedirectToCanonicalUrlAttribute.
- Updated the Boilerplate NuGet packages to the latest versions.
- Upgraded to Newtonsoft.Json 8.0.1.
MVC 6
- Added the Microsoft.AspNet.Razor.Runtime.Precompilation NuGet package for Razor pre-compilation. Added the using 
statement to RazorPreCompilation.cs.
- Added a note to use https://report-uri.io/ to report CSP violation reports.

Version 2.9.1
MVC 6
- Removed Hammer.js.
- Fix Application Insights not registering exceptions in Startup.cs.

Version 2.9.0
MVC 6
- Upgraded NWebSec to latest version and made feature visible but experimental.
- Fixed the manifest.json link having a trailing slash in _Layout.cshtml.

Version 2.8.2
MVC 6
- Added NWebSec security through HTTP Headers to Startup.Filters and project.json. Turned off and hidden for now.
- Fixed the browserconfig.xml link having a trailing slash in _Layout.cshtml.
- Fixed the Bootstrap CSS not pointing to the correct folder for the fonts in site.scss.
