@@ -6,6 +6,7 @@
     "gulp-autoprefixer": "2.3.1",
     "gulp-concat": "2.6.0",
     "gulp-csslint": "0.2.0",
+    "gulp-cssnano": "2.1.0",
     "gulp-if": "2.0.0",
     "gulp-imagemin": "2.4.0",
     // $Start-JavaScriptCodeStyle$
@@ -17,7 +18,6 @@
     // $Start-CshtmlMinification$
     "gulp-minify-cshtml": "0.0.1",
     // $End-CshtmlMinification$
-    "gulp-minify-css": "1.2.3",
     "gulp-plumber": "1.0.1",
     "gulp-rename": "1.2.2",
     // $Start-ApplicationInsights$
