@@ -1,7 +1,20 @@
 ﻿/// <autosync enabled="true" />
+/// <reference path="../bower_components/bootstrap-sass/assets/javascripts/bootstrap.js" />
+/// <reference path="../bower_components/chai/chai.js" />
+/// <reference path="../bower_components/jquery/dist/jquery.js" />
+/// <reference path="../bower_components/jquery-validation/dist/jquery.validate.js" />
+/// <reference path="../bower_components/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js" />
+/// <reference path="../bower_components/mocha/mocha.js" />
 /// <reference path="../gulpfile.js" />
 /// <reference path="../scripts/application-insights.js" />
 /// <reference path="../scripts/fallback/scripts.js" />
 /// <reference path="../scripts/fallback/styles.js" />
 /// <reference path="../scripts/site.js" />
 /// <reference path="../test/site-test.js" />
+/// <reference path="js/application-insights.js" />
+/// <reference path="js/bootstrap.js" />
+/// <reference path="js/jquery.js" />
+/// <reference path="js/jquery-validate.js" />
+/// <reference path="js/jquery-validate-unobtrusive.js" />
+/// <reference path="js/modernizr.js" />
+/// <reference path="js/site.js" />
