@@ -11,6 +11,7 @@ the sitemap.
 - Updated Font Awesome to 4.5.0.
 - Updated JavaScript Mocha, Chai and Sinon.
 - Updated Gulp packages.
+- Switched from deprecated gulp-minify-css to gulp-cssnano.
 
 Version 2.9.4
 MVC 6
